# geo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
examples/embedded-c++/: CMakeLists.txt  main.cpp
geo/: CMakeLists.txt  geo-extension.cpp  geo-functions.cpp  geometry.cpp  postgis.cpp
geo/include/: accessor-functions.hpp  constructor-functions.hpp  formatter-functions.hpp  geo-extension.hpp  geo-functions.hpp  geo_aggregate_function.hpp  geometry.hpp  measure-functions.hpp  parser-functions.hpp  postgis.hpp  postgres.hpp  predicate-functions.hpp  transformation-functions.hpp
geo/include/liblwgeom/: gserialized.hpp  gserialized1.hpp  gserialized2.hpp  liblwgeom.hpp  liblwgeom_internal.hpp  lwgeodetic.hpp  lwgeodetic_tree.hpp  lwgeom_geos.hpp  lwin_wkt.hpp  lwinline.hpp  lwunionfind.hpp  measures.hpp  postigs_config.hpp  stringbuffer.hpp
geo/include/libpgcommon/: lwgeom_pg.hpp  lwgeom_transform.hpp
geo/include/postgis/: geography.hpp  geography_centroid.hpp  geography_inout.hpp  geography_measurement.hpp  geography_measurement_trees.hpp  lwgeom_box.hpp  lwgeom_dump.hpp  lwgeom_export.hpp  lwgeom_functions_analytic.hpp  lwgeom_functions_basic.hpp  lwgeom_geos.hpp  lwgeom_in_geohash.hpp  lwgeom_inout.hpp  lwgeom_ogc.hpp  lwgeom_window.hpp
geo/liblwgeom/: gbox.cpp  gserialized.cpp  gserialized1.cpp  gserialized2.cpp  lwalgorithm.cpp  lwcircstring.cpp  lwcollection.cpp  lwcompound.cpp  lwcurvepoly.cpp  lwgeodetic.cpp  lwgeodetic_tree.cpp  lwgeom.cpp  lwgeom_api.cpp  lwgeom_geos.cpp  lwgeom_geos_cluster.cpp  lwin_geojson.cpp  lwin_wkb.cpp  lwin_wkt.cpp  lwiterator.cpp  lwline.cpp  lwmline.cpp  lwmpoint.cpp  lwmpoly.cpp  lwout_geojson.cpp  lwout_wkb.cpp  lwout_wkt.cpp  lwpoint.cpp  lwpoly.cpp  lwprint.cpp  lwpsurface.cpp  lwspheroid.cpp  lwstroke.cpp  lwtin.cpp  lwtriangle.cpp  lwunionfind.cpp  lwutil.cpp  measures.cpp  ptarray.cpp  stringbuffer.cpp
geo/libpgcommon/: lwgeom_pg.cpp  lwgeom_transform.cpp
geo/postgis/: geography_centroid.cpp  geography_inout.cpp  geography_measurement.cpp  geography_measurement_trees.cpp  gserialized_typmod.cpp  lwgeom_box.cpp  lwgeom_dump.cpp  lwgeom_export.cpp  lwgeom_functions_analytic.cpp  lwgeom_functions_basic.cpp  lwgeom_geos.cpp  lwgeom_in_geohash.cpp  lwgeom_in_geojson.cpp  lwgeom_inout.cpp  lwgeom_ogc.cpp  lwgeom_window.cpp
test/sql/: test_angle.test  test_area.test  test_as_binary.test  test_as_geojson.test  test_as_text.test  test_azimuth.test  test_boundary.test  test_boundingbox.test  test_buffer.test  test_centroid.test  test_closestpoint.test  test_clusterdbscan.test  test_collection.test  test_contains.test  test_convexhull.test  test_coveredby.test  test_covers.test  test_difference.test  test_dimension.test  test_disjoint.test  test_distance.test  test_dump.test  test_dwithin.test  test_endpoint.test  test_equals.test  test_extent.test  test_from_text.test  test_geofromgeojson.test  test_geofromtext.test  test_geofromwkb.test  test_geogfrom.test  test_geogpointfromhash.test  test_geohash.test  test_geometry.test  test_geometrytype.test  test_get_x.test  test_get_y.test  test_intersection.test  test_intersects.test  test_isclosed.test  (+25 more)
